feat: 투어 조회 시 유저의 언어, 문답 반환 추가